--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         <div class="reveal">
             <div class="slides">
                 <section data-markdown data-background="data/ovh-meet-up-brest-digit-event.jpg">
-                    # Networking at OVH
-                    #### Plus vite, plus fort
+                    # Networking with OpenStack at OVH
+                    #### Parce que le reseau
                     ![OVH](data/logo-ovh-meet-up-small.png)
                 </section>
                 <section>
-            <section data-markdown>
+                <section data-markdown>
                         ## Qui sommes nous ?
                     </section>
                     <section data-markdown>
                         ## Pierre LIBEAU
-                        #### Team Leader RUN 
+                        #### Team Leader RUN
                     </section>
                     <section data-markdown>
                         ## Arnaud MORIN
@@ -65,6 +65,57 @@
                         ![OpenStack](data/openstack_logo.png)
                     </section>
                 </section>
+
+                <section>
+                    <section data-markdown>
+                        ## Neutron chez OVH
+                    </section>
+                    <section data-markdown data-separator-notes="^Note:">
+                        ### 2 types
+                        * Public - BGP
+                        * Prive - vRack
+                    </section>
+                </section>
+                <section>
+                    <section data-markdown data-separator-notes="^Note:" data-background="data/networking1.gif">
+                        ## BGP
+                    </section>
+                    <section data-markdown>
+                        # TODO
+                    </section>
+                </section>
+
+                <section>
+                    <section data-markdown data-separator-notes="^Note:" data-background="data/networking2.gif">
+                        ## vRack
+                    </section>
+                    <section data-markdown>
+                        # C'est quoi ?
+                        * Reseau prive de niveau 2
+                        * Possibilite de gerer des VLANs (4000)
+                        * API et manager Web
+                        * Faible latence
+                            * Roubaix (Fr) ==> Beauharnois (Ca) : 40ms
+                            * Roubaix (Fr) ==> Strasbourg (Fr) : 9ms
+                    </section>
+                    <section data-markdown>
+                        ![vRack](data/schema-isolation.png)
+                    </section>
+                    <section data-markdown>
+                        ![vRack](data/schema-vlan.png)
+                    </section>
+                    <section data-markdown>
+                        ![vRack](data/schema-datacentre.png)
+                    </section>
+
+                </section>
+
+                
+
+
+
+
+
                 <section>
                     <h2>Scale</h2>
                     <ol>
