--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </section>
                     <section data-markdown>
                         ### Faible latence
-                        ###### 40ms entre DC en France et Canada
+                        ###### 40ms entre DC France / Canada
                         ![vRack](data/schema-datacentre.png)
                     </section>
                     <section data-markdown>
@@ -129,8 +129,12 @@
                         ![vRack](data/api.gif)
                     </section>
                     <section data-markdown>
-                        ### Le vRack et OpenStack
-                        schema mix entre celui de slide 38 slawek et celui de confluence
+                        ### ajouter slide slawek 38 je crois
+                    </section>
+                    <section data-markdown>
+                        ### Le vRack dans tous ses details
+                    </section>
+                    <section data-markdown data-separator-notes="^Note:" data-background="data/vrack.png" data-background-size="contain">
                     </section>
                     <section data-markdown data-separator-notes="^Note:" data-background="data/ninja_vrack.gif" data-background-size="contain" data-background-color="black">
                     </section>
