--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </section>
                 </section>
                     <section data-markdown data-separator-notes="^Note:">
-                        ### 2 types
+                        ### 2 types de reseaux
                         * Public - BGP
                         * Prive - vRack
                     </section>
@@ -153,10 +153,9 @@
                         ![vRack](data/api.gif)
                     </section>
                     <section data-markdown>
-                        ### ajouter slide slawek 38 je crois
-                    </section>
-                    <section data-markdown>
                         ### Le vRack dans tous ses details
+                    </section>
+                    <section data-markdown data-separator-notes="^Note:" data-background="data/vrack_l2_agent_taf.png" data-background-size="contain">
                     </section>
                     <section data-markdown data-separator-notes="^Note:" data-background="data/vrack.png" data-background-size="contain">
                     </section>
