--- a/index.html
+++ b/index.html
@@ -169,12 +169,14 @@
                     </section>
                 </section>
 
+                <section data-markdown data-separator-notes="^Note:" data-background="data/commande_vrack_cloud.gif" data-background-size="contain" data-background-color="black"></section>
+                <section data-markdown data-separator-notes="^Note:" data-background="data/ajout_vrack_projet.gif" data-background-size="contain" data-background-color="black"></section>
+
                 <section data-markdown data-background="data/camion_plot.gif">
                     ## Conclusion / Questions ?
                 </section>
 
-                <section data-markdown data-separator-notes="^Note:" data-background="data/ninja_vrack.gif" data-background-size="contain" data-background-color="black">
-                </section>
+                <section data-markdown data-separator-notes="^Note:" data-background="data/ninja_vrack.gif" data-background-size="contain" data-background-color="black"></section>
             </div>
         </div>
 
